initial commit after creating a new file

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,10 @@
             android:textColor="@color/black"
             android:textColorHint="@color/black"
             android:textSize="20sp"
+            android:background="@drawable/rounded_corner"
+            android:padding="18dp"
+            android:inputType="textCapSentences"
+            android:id="@+id/username_input"
 
     </LinearLayout>
 
