--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,8 +55,29 @@
             android:text="Login"
             android:backgroundTint="@color/black"
             android:textColor="@color/white"
+            android:textSize="24dp"
+            android:id="@id/login_btn"/>
 
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Social Login"
+            android:textSize="19dp"
+            android:textColor="@color/black"
+            android:layout_marginTop="32dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="8dp"
+            android:gravity="center">
+            <ImageView
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_margin="16dp"
+                android:src=""
+        </LinearLayout>
     </LinearLayout>
 
 
